--- a/src/assets/style/Grid/Rodape.css
+++ b/src/assets/style/Grid/Rodape.css
@@ -1,86 +1,89 @@
-.rodape{
-    display: grid;
-    grid-template-columns: auto 2fr auto 1fr repeat(3, auto) 1fr auto 1.5fr repeat(2, auto);
-    grid-template-rows: repeat(2, 50%);
-    column-gap: 0.5rem;
-    align-items: center;
+.rodape {
+  display: grid;
+  grid-template-columns: auto 2fr auto 1fr repeat(3, auto) 1fr auto 1.5fr repeat(
+      2,
+      auto
+    );
+  grid-template-rows: repeat(2, 50%);
+  column-gap: 0.5rem;
+  align-items: center;
 }
 
 .rodape .rodape__imagem {
-    grid-row: 1/3;
-    grid-column: 1/2;
-    align-self: center;
+  grid-row: 1/3;
+  grid-column: 1/2;
+  align-self: center;
 }
 
 .rodape .rodape__titulo {
-    grid-row: 1/2;
-    grid-column: 2/3;
-    align-self: self-end;
+  grid-row: 1/2;
+  grid-column: 2/3;
+  align-self: self-end;
 }
 
 .rodape .rodape__subtitulo {
-    grid-row: 2/3;
-    grid-column: 2/3;
-    align-self: self-start;
+  grid-row: 2/3;
+  grid-column: 2/3;
+  align-self: self-start;
 }
 
 .rodape .rodape__horario--inicio {
-    grid-column: 3/4;
-    grid-row: 2/3;
-    align-self: center;
+  grid-column: 3/4;
+  grid-row: 2/3;
+  align-self: center;
 }
 
 .rodape .barra__container--reproducao {
-    grid-column: 4/9;
-    grid-row: 2/3;
-    align-self: center;
+  grid-column: 4/9;
+  grid-row: 2/3;
+  align-self: center;
 }
 
 .rodape .rodape__botao--voltar {
-    grid-column: 4/5;
-    grid-row: 1/2;
-    justify-self: end;
+  grid-column: 4/5;
+  grid-row: 1/2;
+  justify-self: end;
 }
 
 .rodape .rodape__botao--anterior {
-    grid-column: 5/6;
-    grid-row: 1/2;
+  grid-column: 5/6;
+  grid-row: 1/2;
 }
 .rodape .rodape__botao--play {
-    grid-row: 1/2;
-    grid-column: 6/7;
+  grid-row: 1/2;
+  grid-column: 6/7;
 }
 
-.rodape .rodape__botao--avancar{
-    grid-row: 1/2;
-    grid-column: 7/8;
+.rodape .rodape__botao--avancar {
+  grid-row: 1/2;
+  grid-column: 7/8;
 }
 
 .rodape .rodape__botao--proximo {
-    grid-row: 1/2;
-    grid-column: 8/9;
-    justify-self: left;
+  grid-row: 1/2;
+  grid-column: 8/9;
+  justify-self: left;
 }
 
 .rodape .rodape__horario--termino {
-    grid-row: 2/3;
-    grid-column: 9/10;
-    align-self: center;
+  grid-row: 2/3;
+  grid-column: 9/10;
+  align-self: center;
 }
 
 .rodape .rodape__botao--volume-down {
-    grid-column: 10/11;
-    grid-row: 2/3;
-    justify-self: end;
+  grid-column: 10/11;
+  grid-row: 2/3;
+  justify-self: end;
 }
 
-.rodape .barra__container--volume{
-    grid-column: 11/12;
-    grid-row: 2/3;
-    align-self: center;
+.rodape .barra__container--volume {
+  grid-column: 11/12;
+  grid-row: 2/3;
+  align-self: center;
 }
 
 .rodape .rodape__botao--volume-up {
-    grid-column: 12/13;
-    grid-row: 2/3;
+  grid-column: 12/13;
+  grid-row: 2/3;
 }
